--- a/backend/webreceiver/templates/webreceiver/index.html
+++ b/backend/webreceiver/templates/webreceiver/index.html
@@ -93,7 +93,7 @@
       <tr>
         <td><p>{{ payment.paymentid }}</p></td>
         <td><p>{{ payment.sender }}</p></td>
-        <td><p>{{ payment.promiseid }}</p></td>
+        <td><p>{{ payment.receiver }}</p></td>
         <td><p>{{ payment.amount }}</p></td>
        </tr>
       {% endfor %}
